@@ -43,13 +43,14 @@ import java.util.Vector;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import megamek.common.compute.Compute;
-import megamek.common.board.Coords;
-import megamek.common.units.Entity;
-import megamek.common.game.Game;
-import megamek.common.units.Targetable;
 import megamek.common.ToHitData;
 import megamek.common.actions.WeaponAttackAction;
+import megamek.common.board.Coords;
+import megamek.common.compute.Compute;
+import megamek.common.game.Game;
+import megamek.common.units.Entity;
+import megamek.common.units.Targetable;
+import org.jspecify.annotations.NonNull;
 
 /**
  * Tracks enemy units and calculates threat scores based on their positions and capabilities.
@@ -99,6 +100,7 @@ public class EnemyTracker {
      *
      * @return A list of enemy entities with 25% or higher chance of hitting the attack in that target.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public List<Entity> getPriorityTargets(Targetable targetable) {
         if (enemyProfiles.isEmpty()) {
             updateThreatAssessment(targetable.getPosition());
@@ -141,6 +143,7 @@ public class EnemyTracker {
      *
      * @return The threat score against the cluster.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public double getClusterThreatScore(Coords clusterCenter) {
         return getPriorityTargets(clusterCenter, 5).stream()
               .mapToDouble(e -> {
@@ -214,10 +217,12 @@ public class EnemyTracker {
             return entityId;
         }
 
+        @Deprecated(since = "0.51.0", forRemoval = true)
         public Coords getLastPosition() {
             return lastPosition;
         }
 
+        @Deprecated(since = "0.51.0", forRemoval = true)
         public double getDamagePotential() {
             return damagePotential;
         }
@@ -226,6 +231,7 @@ public class EnemyTracker {
             return lastSeenTurn;
         }
 
+        @Deprecated(since = "0.51.0", forRemoval = true)
         public double getThreatScore() {
             return threatScore;
         }
@@ -237,7 +243,7 @@ public class EnemyTracker {
         public void update(Coords newPosition, double newDamage, int currentTurn) {
             movementHistory.add(newPosition);
             if (movementHistory.size() > 5) {
-                movementHistory.remove(0);
+                movementHistory.removeFirst();
             }
 
             lastPosition = newPosition;
@@ -264,11 +270,11 @@ public class EnemyTracker {
             }
 
             // Calculate movement direction consistency
-            Coords oldest = movementHistory.get(0);
-            Coords newest = movementHistory.get(movementHistory.size() - 1);
+            Coords oldest = movementHistory.getFirst();
+            Coords newest = movementHistory.getLast();
             double directDistance = oldest.distance(newest);
             double actualDistance = movementHistory.stream()
-                  .mapToDouble(c -> c.distance(movementHistory.get(0)))
+                  .mapToDouble(c -> c.distance(movementHistory.getFirst()))
                   .sum();
 
             // Higher score for direct approaches
@@ -276,7 +282,7 @@ public class EnemyTracker {
         }
 
         @Override
-        public int compareTo(Double aDouble) {
+        public int compareTo(@NonNull Double aDouble) {
             return Double.compare(threatScore, aDouble);
         }
     }
