@@ -323,10 +323,8 @@ class LOSElevationDiagramPanel extends JPanel {
         // Include unit positions in the range. absHeight is the unit top (TW height).
         // Unit bottom = absHeight - TW height (accounts for elevation, e.g., VTOLs).
         // Airborne aero (altitude) units are excluded - they are drawn above the break line.
-        boolean attackerIsAltitude = diagramData.attackerUnitType().isAltitudeUnit()
-              && (diagramData.attackerAbsHeight() > maxLevel);
-        boolean targetIsAltitude = diagramData.targetUnitType().isAltitudeUnit()
-              && (diagramData.targetAbsHeight() > maxLevel);
+        boolean attackerIsAltitude = diagramData.attackerAtAltitude();
+        boolean targetIsAltitude = diagramData.targetAtAltitude();
 
         int attackerTwHeight = diagramData.attackerUnitType().twHeight()
               - (diagramData.attackerIsHullDown() ? 1 : 0);
@@ -372,12 +370,12 @@ class LOSElevationDiagramPanel extends JPanel {
                   attackerIsAltitude ? Integer.MAX_VALUE : attackerBottom,
                   targetIsAltitude ? Integer.MAX_VALUE : targetBottom);
 
-            if ((highestUnit != Integer.MIN_VALUE) && (highestUnit > cappedMax - LEVEL_PADDING)) {
+            if ((highestUnit > cappedMax - LEVEL_PADDING)) {
                 int shift = highestUnit - (cappedMax - LEVEL_PADDING);
                 cappedMax += shift;
                 cappedMin += shift;
             }
-            if ((lowestUnit != Integer.MAX_VALUE) && (lowestUnit < cappedMin + LEVEL_PADDING)) {
+            if ((lowestUnit < cappedMin + LEVEL_PADDING)) {
                 int shift = (cappedMin + LEVEL_PADDING) - lowestUnit;
                 cappedMin -= shift;
                 cappedMax -= shift;
@@ -589,17 +587,17 @@ class LOSElevationDiagramPanel extends JPanel {
     }
 
     /**
-     * Draws a tree silhouette profile. Woods get conical (evergreen) shapes, jungle gets
-     * rounded (broadleaf) shapes. Higher density draws more trees side by side.
+     * Draws a tree silhouette profile. Woods get conical (evergreen) shapes, jungle gets rounded (broadleaf) shapes.
+     * Higher density draws more trees side by side.
      *
-     * @param g2d       the graphics context
-     * @param color     the foliage color
-     * @param x         left edge of the drawing area
-     * @param y         top edge of the drawing area
-     * @param width     width of the drawing area
-     * @param height    height of the drawing area
-     * @param density   foliage density (1=light, 2=heavy, 3=ultra)
-     * @param isJungle  true for jungle (rounded canopy), false for woods (conical canopy)
+     * @param g2d      the graphics context
+     * @param color    the foliage color
+     * @param x        left edge of the drawing area
+     * @param y        top edge of the drawing area
+     * @param width    width of the drawing area
+     * @param height   height of the drawing area
+     * @param density  foliage density (1=light, 2=heavy, 3=ultra)
+     * @param isJungle true for jungle (rounded canopy), false for woods (conical canopy)
      */
     private void drawTreeSilhouette(Graphics2D g2d, Color color, int x, int y,
           int width, int height, int density, boolean isJungle) {
@@ -609,7 +607,6 @@ class LOSElevationDiagramPanel extends JPanel {
 
         int trunkHeight = Math.max(height / 5, 2);
         int canopyHeight = height - trunkHeight;
-        int canopyTop = y;
         int canopyBottom = y + canopyHeight;
 
         // Draw more trees for higher density
@@ -631,11 +628,11 @@ class LOSElevationDiagramPanel extends JPanel {
             g2d.setColor(color);
             if (isJungle) {
                 // Rounded canopy for jungle
-                g2d.fillOval(treeX + 1, canopyTop, treeWidth - 2, canopyHeight);
+                g2d.fillOval(treeX + 1, y, treeWidth - 2, canopyHeight);
             } else {
                 // Conical (triangular) canopy for woods/evergreen
                 int[] xPoints = { treeCenterX, treeX + 1, treeX + treeWidth - 1 };
-                int[] yPoints = { canopyTop, canopyBottom, canopyBottom };
+                int[] yPoints = { y, canopyBottom, canopyBottom };
                 g2d.fillPolygon(xPoints, yPoints, 3);
             }
         }
@@ -872,12 +869,12 @@ class LOSElevationDiagramPanel extends JPanel {
                 double edgeFade = 1.0 - 0.4 * Math.abs(puffProgress - 0.5) * 2;
                 double topFade = progress > 0.85 ? 1.0 - (progress - 0.85) / 0.15 : 1.0;
                 int alpha = (int) (baseAlpha * edgeFade * topFade);
-                alpha = Math.max(15, Math.min(200, alpha));
+                alpha = Math.clamp(alpha, 15, 200);
 
                 // Color variation: lighter at top (rising smoke), darker at base
                 int grayShift = (int) (40 * progress);
                 int grayVar = ((hash + puff) % 3 - 1) * 12;
-                int gray = Math.max(0, Math.min(235, baseGray + grayShift + grayVar));
+                int gray = Math.clamp(baseGray + grayShift + grayVar, 0, 235);
 
                 g2d.setColor(new Color(gray, gray, gray, alpha));
                 g2d.fillOval(px, py, puffW, puffH);
@@ -1028,12 +1025,10 @@ class LOSElevationDiagramPanel extends JPanel {
             drawAltitudeUnitAboveBreak(g2d, metrics, 0, RulerDialog.color1,
                   diagramData.attackerUnitType(), diagramData.attackerAbsHeight(), true);
         } else {
-            int attackerTwHeight = diagramData.attackerUnitType().twHeight();
-            if (diagramData.attackerIsHullDown()) {
-                attackerTwHeight = Math.max(1, attackerTwHeight - 1);
-            }
             int attackerTop = diagramData.attackerAbsHeight();
-            int attackerBottom = attackerTop - attackerTwHeight;
+            int attackerBottom = computeUnitBottom(diagramData.attackerUnitType(),
+                  diagramData.attackerIsHullDown(), attackerTop,
+                  hexPath.getFirst().groundElevation());
             drawUnitSilhouette(g2d, metrics, 0, attackerBottom, attackerTop,
                   RulerDialog.color1,
                   diagramData.attackerUnitType(), true);
@@ -1044,12 +1039,10 @@ class LOSElevationDiagramPanel extends JPanel {
             drawAltitudeUnitAboveBreak(g2d, metrics, hexPath.size() - 1, RulerDialog.color2,
                   diagramData.targetUnitType(), diagramData.targetAbsHeight(), false);
         } else {
-            int targetTwHeight = diagramData.targetUnitType().twHeight();
-            if (diagramData.targetIsHullDown()) {
-                targetTwHeight = Math.max(1, targetTwHeight - 1);
-            }
             int targetTop = diagramData.targetAbsHeight();
-            int targetBottom = targetTop - targetTwHeight;
+            int targetBottom = computeUnitBottom(diagramData.targetUnitType(),
+                  diagramData.targetIsHullDown(), targetTop,
+                  hexPath.getLast().groundElevation());
             drawUnitSilhouette(g2d, metrics, hexPath.size() - 1, targetBottom, targetTop,
                   RulerDialog.color2,
                   diagramData.targetUnitType(), false);
@@ -1085,6 +1078,24 @@ class LOSElevationDiagramPanel extends JPanel {
         g2d.drawString(altLabel, xCenter - labelWidth / 2, yBottom + fontMetrics.getHeight());
     }
 
+    /**
+     * Computes the bottom level for a unit's silhouette. Most units use their TW height (e.g., Mek spans 2 levels from
+     * bottom to top). Grounded altitude units (landed dropships) extend from the hex ground level to their full height,
+     * since their physical height is much taller than the standard TW height of 1.
+     */
+    private int computeUnitBottom(DiagramUnitType unitType, boolean isHullDown,
+          int topLevel, int groundElevation) {
+        if (unitType.isAltitudeUnit()) {
+            // Grounded dropship/small craft: extends from ground level to full height
+            return groundElevation;
+        }
+        int twHeight = unitType.twHeight();
+        if (isHullDown) {
+            twHeight = Math.max(1, twHeight - 1);
+        }
+        return topLevel - twHeight;
+    }
+
     private void drawUnitSilhouette(Graphics2D g2d, DiagramMetrics metrics,
           int hexIndex, int bottomLevel, int topLevel,
           Color barColor, DiagramUnitType unitType, boolean facingRight) {
@@ -1101,13 +1112,23 @@ class LOSElevationDiagramPanel extends JPanel {
         int silhouetteHeight = levelBasedHeight;
         int yTop = yBottom - silhouetteHeight;
 
-        if (unitType == DiagramUnitType.SUPERHEAVY_MEK) {
-            // Draw the silhouette at 2 levels (bottom 2/3 of the 3-level span),
-            // with a T-bar turret marker extending up to the actual top level
-            int bodyHeight = Math.max(yBottom - metrics.levelToY(bottomLevel + 2), 2);
+        // Tall units (superheavy Meks, grounded dropships) draw the silhouette at the base
+        // with a T-bar extending up to the actual top height, so they don't appear airborne.
+        int twLevels = topLevel - bottomLevel;
+        boolean isTallUnit = (unitType == DiagramUnitType.SUPERHEAVY_MEK)
+              || (unitType.isAltitudeUnit() && (twLevels > 2));
+        if (isTallUnit) {
+            // Draw silhouette at the bottom 2 levels, T-bar extends to actual top
+            int bodyLevels = Math.min(2, twLevels);
+            int bodyHeight = Math.max(yBottom - metrics.levelToY(bottomLevel + bodyLevels), 2);
             int yBodyTop = yBottom - bodyHeight;
-            drawSuperHeavyMekSilhouette(g2d, xCenter, yBodyTop, silhouetteWidth, bodyHeight,
-                  barColor, facingRight);
+            if (unitType == DiagramUnitType.SUPERHEAVY_MEK) {
+                drawSuperHeavyMekSilhouette(g2d, xCenter, yBodyTop, silhouetteWidth, bodyHeight,
+                      barColor, facingRight);
+            } else {
+                drawUnitShape(g2d, unitType, xCenter, yBodyTop, silhouetteWidth, bodyHeight,
+                      barColor, facingRight);
+            }
             drawTurretMarker(g2d, xCenter, yBodyTop, yTop, barColor);
         } else {
             drawUnitShape(g2d, unitType, xCenter, yTop, silhouetteWidth, silhouetteHeight,
@@ -1522,7 +1543,7 @@ class LOSElevationDiagramPanel extends JPanel {
      */
     private void drawAeroFighterSilhouette(Graphics2D g2d, int xCenter, int yTop,
           int width, int height, Color color, boolean facingRight) {
-        BufferedImage image = loadSilhouetteImage("Aerospace_Fighter_Silhouette.png");
+        BufferedImage image = loadSilhouetteImage("Aerospace_Fighter.png");
         if (image != null) {
             drawSilhouetteImage(g2d, image, xCenter, yTop, height, color, facingRight);
             return;
