@@ -33,6 +33,8 @@
  */
 package megamek.client.ui.panels.phaseDisplay;
 
+import static megamek.common.bays.Bay.UNSET_BAY;
+
 import java.awt.event.ActionEvent;
 import java.awt.event.InputEvent;
 import java.awt.event.MouseEvent;
@@ -54,6 +56,7 @@ import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.boardview.BoardView;
 import megamek.client.ui.clientGUI.boardview.CollapseWarning;
 import megamek.client.ui.clientGUI.boardview.IBoardView;
+import megamek.client.ui.clientGUI.boardview.overlay.ToastLevel;
 import megamek.client.ui.dialogs.ConfirmDialog;
 import megamek.client.ui.dialogs.phaseDisplay.DeployElevationChoiceDialog;
 import megamek.client.ui.dialogs.phaseDisplay.DeployFacingChoiceDialog;
@@ -85,8 +88,6 @@ import megamek.common.units.Entity;
 import megamek.common.units.IAero;
 import megamek.common.units.Infantry;
 import megamek.logging.MMLogger;
-
-import static megamek.common.bays.Bay.UNSET_BAY;
 
 public class DeploymentDisplay extends StatusBarPhaseDisplay {
     private final static MMLogger logger = MMLogger.create(DeploymentDisplay.class);
@@ -405,9 +406,8 @@ public class DeploymentDisplay extends StatusBarPhaseDisplay {
             boolean crushesBuildingHex = allPositions.stream()
                   .anyMatch(c -> game.getBoard(entity.getBoardId()).getBuildingAt(c) != null);
             if (crushesBuildingHex) {
-                String title = Messages.getString("DeploymentDisplay.alertDialog.title");
-                String body = Messages.getString("DeploymentDisplay.dropshipBuildingDeploy");
-                clientgui.doAlertDialog(title, body);
+                clientgui.addToast(ToastLevel.ERROR,
+                      Messages.getString("DeploymentDisplay.dropshipBuildingDeploy"), entity);
                 return true;
             }
         }
@@ -658,8 +658,8 @@ public class DeploymentDisplay extends StatusBarPhaseDisplay {
             showCannotDeployHereMessage(coords);
             return null;
         } else if (elevationOptions.size() == 1) {
-            finalElevation = elevationOptions.get(0).elevation();
-            updateDeploymentCache(elevationOptions, elevationOptions.get(0));
+            finalElevation = elevationOptions.getFirst().elevation();
+            updateDeploymentCache(elevationOptions, elevationOptions.getFirst());
             finalFacing = promptForFacingIfNeeded(facingOptions, finalFacing);
         } else if (useLastDeployElevation(elevationOptions) && !coords.equals(entity.getPosition())) {
             // When the player clicks the same hex again, always ask for the elevation
@@ -808,19 +808,19 @@ public class DeploymentDisplay extends StatusBarPhaseDisplay {
             case GROUND -> "Ground";
         };
         String msg = Messages.getString("DeploymentDisplay.wrongMapType", currentEntity().getShortName(), boardType);
-        JOptionPane.showMessageDialog(clientgui.getFrame(), msg, title, JOptionPane.INFORMATION_MESSAGE);
+        clientgui.addToast(ToastLevel.ERROR, msg, currentEntity());
     }
 
     private void showOutsideDeployAreaMessage() {
         String msg = Messages.getString("DeploymentDisplay.outsideDeployArea");
-        String title = Messages.getString("DeploymentDisplay.alertDialog.title");
-        JOptionPane.showMessageDialog(clientgui.getFrame(), msg, title, JOptionPane.INFORMATION_MESSAGE);
+        clientgui.addToast(ToastLevel.ERROR, msg);
     }
 
     private void showCannotDeployHereMessage(Coords coords) {
-        String msg = Messages.getString("DeploymentDisplay.cantDeployInto", currentEntity().getShortName(), coords.getBoardNum());
-        String title = Messages.getString("DeploymentDisplay.alertDialog.title");
-        JOptionPane.showMessageDialog(clientgui.getFrame(), msg, title, JOptionPane.INFORMATION_MESSAGE);
+        String msg = Messages.getString("DeploymentDisplay.cantDeployInto",
+              currentEntity().getShortName(),
+              coords.getBoardNum());
+        clientgui.addToast(ToastLevel.ERROR, msg, currentEntity());
     }
 
     private void processTurn(Entity entity, Coords coords) {
@@ -969,10 +969,9 @@ public class DeploymentDisplay extends StatusBarPhaseDisplay {
                 clientgui.getUnitDisplay().displayEntity(currentEntity());
                 setUnloadEnabled(true);
             } else {
-                JOptionPane.showMessageDialog(clientgui.getFrame(),
-                      Messages.getString("DeploymentDisplay.alertDialog1.message", currentEntity().getShortName()),
-                      Messages.getString("DeploymentDisplay.alertDialog1.title"),
-                      JOptionPane.ERROR_MESSAGE);
+                clientgui.addToast(ToastLevel.ERROR,
+                      Messages.getString("DeploymentDisplay.alertDialog1.message",
+                            currentEntity().getShortName()), currentEntity());
             }
         } else if (actionCmd.equals(DeployCommand.DEPLOY_UNLOAD.getCmd())) {
             // Do we have anyone to unload?
@@ -1003,14 +1002,15 @@ public class DeploymentDisplay extends StatusBarPhaseDisplay {
                         }
                         setLoadEnabled(!getLoadableEntities().isEmpty());
                     } else {
-                        logger.error("Could not unload {} from {}", loaded.getShortName(), currentEntity().getShortName());
+                        logger.error("Could not unload {} from {}",
+                              loaded.getShortName(),
+                              currentEntity().getShortName());
                     }
                 }
             } else {
-                JOptionPane.showMessageDialog(clientgui.getFrame(),
-                      Messages.getString("DeploymentDisplay.alertDialog2.message", currentEntity().getShortName()),
-                      Messages.getString("DeploymentDisplay.alertDialog2.title"),
-                      JOptionPane.ERROR_MESSAGE);
+                clientgui.addToast(ToastLevel.WARNING,
+                      Messages.getString("DeploymentDisplay.alertDialog2.message",
+                            currentEntity().getShortName()), currentEntity());
             }
         } else if (actionCmd.equals(DeployCommand.DEPLOY_REMOVE.getCmd())) {
             if (JOptionPane.showConfirmDialog(clientgui.getFrame(),
