@@ -43,6 +43,7 @@ import megamek.client.event.BoardViewEvent;
 import megamek.client.ui.Messages;
 import megamek.client.ui.clientGUI.ClientGUI;
 import megamek.client.ui.clientGUI.boardview.IBoardView;
+import megamek.client.ui.clientGUI.boardview.overlay.ToastLevel;
 import megamek.client.ui.dialogs.phaseDisplay.TargetChoiceDialog;
 import megamek.client.ui.widget.MegaMekButton;
 import megamek.common.actions.InitiateInfantryCombatAction;
@@ -169,23 +170,23 @@ public class PreEndDeclarationsDisplay extends AttackPhaseDisplay {
 
         // Check if already in combat
         if (inf.getInfantryCombatTargetId() != Entity.NONE) {
-            clientgui.doAlertDialog("Impossible",
-                  "Already engaged in combat");
+            clientgui.addToast(ToastLevel.ERROR,
+                  Messages.getString("InfantryVsInfantryCombatDisplay.alreadyEngaged"));
             return;
         }
 
         // Check if target is a building
         Entity targetEntity = game.getEntity(target.getId());
         if (!(targetEntity instanceof AbstractBuildingEntity)) {
-            clientgui.doAlertDialog("Impossible",
-                  "Target must be a building");
+            clientgui.addToast(ToastLevel.ERROR,
+                  Messages.getString("InfantryVsInfantryCombatDisplay.targetMustBeBuilding"));
             return;
         }
 
         // Check if same hex
         if (!ce.getPosition().equals(targetEntity.getPosition())) {
-            clientgui.doAlertDialog("Impossible",
-                  "Must be in same hex as target");
+            clientgui.addToast(ToastLevel.ERROR,
+                  Messages.getString("InfantryVsInfantryCombatDisplay.mustBeSameHex"));
             return;
         }
 
@@ -197,8 +198,8 @@ public class PreEndDeclarationsDisplay extends AttackPhaseDisplay {
               .anyMatch(e -> e.getInfantryCombatTargetId() != Entity.NONE);
 
         if (combatExists) {
-            clientgui.doAlertDialog("Impossible",
-                  "Combat already exists - use reinforce action instead");
+            clientgui.addToast(ToastLevel.WARNING,
+                  Messages.getString("InfantryVsInfantryCombatDisplay.combatAlreadyExists"));
             return;
         }
 
@@ -232,9 +233,7 @@ public class PreEndDeclarationsDisplay extends AttackPhaseDisplay {
         if (attacks.isEmpty() && currentEntity() != null) {
             String title = "Skip Turn?";
             String body = "You haven't initiated any infantry combat. Skip turn anyway?";
-            if (!clientgui.doYesNoDialog(title, body)) {
-                return true;  // User cancelled
-            }
+            return !clientgui.doYesNoDialog(title, body);  // User canceled
         }
         return false;
     }
@@ -339,7 +338,7 @@ public class PreEndDeclarationsDisplay extends AttackPhaseDisplay {
         if (targets.isEmpty()) {
             return null;
         } else if (targets.size() == 1) {
-            return targets.get(0);
+            return targets.getFirst();
         } else {
             // Multiple targets - show choice dialog
             return TargetChoiceDialog.showSingleChoiceDialog(
