@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2005 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -36,7 +36,6 @@ package megamek.common.compute;
 
 import static java.lang.Math.max;
 import static java.lang.Math.min;
-import static megamek.codeUtilities.MathUtility.clamp;
 
 import java.util.*;
 
@@ -329,7 +328,7 @@ public class Compute {
 
         // Compute sum in long to avoid overflow, then clamp to int range
         long sum = (long) highest + (long) second;
-        return (int) clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
+        return Math.clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
     }
 
     /**
@@ -437,13 +436,13 @@ public class Compute {
      * would not. The returned entity is the entity causing the violation.
      * <p>
      * The position and elevation for the stacking violation are derived from the Entity represented by the passed
-     * Entity ID.
-     * By default, ignores hidden units.
+     * Entity ID. By default, ignores hidden units.
      *
      * @param game       The Game instance
      * @param enteringId The gameId of the moving Entity
      * @param coords     The hex being entered
      * @param climbMode  The moving Entity's climb mode at the point it enters the destination hex
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, int enteringId, Coords coords, boolean climbMode) {
@@ -460,12 +459,13 @@ public class Compute {
      * <p>
      * The position and elevation for the stacking violation are derived from the passed Entity.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -480,13 +480,14 @@ public class Compute {
      * <p>
      * The position is derived from the passed Entity, while the elevation is derived from the passed Entity parameter.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -495,16 +496,18 @@ public class Compute {
               elevation, dest, entering.getBoardId(), transport, climbMode, ignoreHidden);
     }
 
-    /** Used by Princess / bots for checking deployment positions.
+    /**
+     * Used by Princess / bots for checking deployment positions.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
      * @param origPosition The coords of the hex the moving Entity is leaving
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -516,14 +519,15 @@ public class Compute {
     /**
      * Board-aware check used when compiling movepaths
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param destBoardId  Allows setting a different board for checking destination hex
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -543,10 +547,11 @@ public class Compute {
      * @param origPosition The coords of the hex the moving Entity is leaving
      * @param elevation    The elevation of the moving Entity
      * @param dest         The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
+     * @param destBoardId  Allows setting a different board for checking destination hex
      * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
      * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -564,8 +569,9 @@ public class Compute {
 
         // LAM in fighter mode shouldn't be treated as a Mek for all this
         boolean isMek =
-              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
-              || (entering instanceof SmallCraft);
+              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam
+                    && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
+                    || (entering instanceof SmallCraft);
         boolean isLargeSupport = (entering instanceof LargeSupportTank)
               || (entering instanceof Dropship)
               || ((entering instanceof Mek) && entering.isSuperHeavy());
@@ -1411,8 +1417,7 @@ public class Compute {
 
         // allow naval units to target underwater units,
         // torpedo tubes are mounted underwater
-        if ((targetUnderwater || (weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO) ||
-              (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO))
+        if ((targetUnderwater || (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()))
               && (attackingEntity.getUnitType() == UnitType.NAVAL)) {
             weaponUnderwater = true;
             weaponRanges = weaponType.getWRanges();
@@ -1464,8 +1469,7 @@ public class Compute {
             }
         } else if (targetUnderwater) {
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Target underwater, but not weapon.");
-        } else if ((weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO)
-              || (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO)) {
+        } else if (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()) {
             // Torpedoes only fire underwater.
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Weapon can only fire underwater.");
         }
@@ -2097,15 +2101,15 @@ public class Compute {
             distance += (2 * attacker.getAltitude());
         }
 
-        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.get(0))) {
+        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.getFirst())) {
             // Atmospheric hexes count as extra range
             Board attackerBoard = game.getBoard(attacker);
             Coords currentCoords = attacker.getPosition();
-            currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+            currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
             int safetyCounter = 0;
-            while (!currentCoords.equals(targetPos.get(0)) && (safetyCounter < 1000)) {
+            while (!currentCoords.equals(targetPos.getFirst()) && (safetyCounter < 1000)) {
                 safetyCounter++; // prevent infinite loops
-                currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+                currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
                 if (BoardHelper.isAtmosphericRow(game, attackerBoard, currentCoords)
                       || BoardHelper.isGroundRowHex(attackerBoard, currentCoords)) {
                     distance += BoardHelper.highAltAtmosphereRowRangeIncrease(game);
@@ -2824,6 +2828,12 @@ public class Compute {
             return new ToHitData(TargetRoll.AUTOMATIC_FAIL, "attacker sprinted");
         }
 
+        // While clearing woods with a saw, weapon attacks are penalized as running/flank speed
+        // (TM pp.241-243). Apply minimum +2 modifier if not already at or above that level.
+        if (entity.isClearingWoods() && (toHit.getValue() < (2 / dedicatedGunnerMod))) {
+            toHit = new ToHitData(2 / dedicatedGunnerMod, "clearing woods with saw");
+        }
+
         return toHit;
     }
 
@@ -2935,7 +2945,9 @@ public class Compute {
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_STANDING_STILL)
               && (entity.mpUsed == 0)
               && !entity.isImmobile()
-              && !((entity instanceof Infantry) || (entity instanceof VTOL) || (entity.isBuildingEntityOrGunEmplacement()))) {
+              && !((entity instanceof Infantry)
+              || (entity instanceof VTOL)
+              || (entity.isBuildingEntityOrGunEmplacement()))) {
             ToHitData toHit = new ToHitData();
             toHit.addModifier(-1, "target did not move");
             return toHit;
@@ -3379,14 +3391,14 @@ public class Compute {
     }
 
     /**
-     * Returns the weapon attack out of a list that has the second highest expected damage
-     * Used for Playtest 3 AMS engaging multiple salvos
+     * Returns the weapon attack out of a list that has the second highest expected damage Used for Playtest 3 AMS
+     * engaging multiple salvos
      */
     public static WeaponAttackAction getSecondHighestExpectedDamage(Game g,
           List<WeaponAttackAction> vAttacks, boolean assumeHit) {
         WeaponAttackAction waaHighest;
         WeaponAttackAction waaSecondHighest;
-        
+
         // Copy the list to a new list
         List<WeaponAttackAction> attacksClone = new ArrayList<>(vAttacks);
         // Find the highest damage
@@ -3912,6 +3924,7 @@ public class Compute {
      * infernos, do no damage or have special properties and so the damage is an estimation of effectiveness
      */
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static double getAmmoAdjDamage(Game game, WeaponAttackAction weaponAttackAction) {
         boolean noBin = true;
         boolean multiBin = false;
@@ -4364,18 +4377,28 @@ public class Compute {
             return hasAnyFiringSolution(game, te.getId());
         }
         boolean teIlluminated = false;
+        boolean teEntityIlluminated = false;
+        boolean teUsingSearchlight = false;
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
             Entity te = (Entity) target;
-            teIlluminated = te.isIlluminated();
+            teEntityIlluminated = te.isIlluminated();
+            teUsingSearchlight = te.isUsingSearchlight();
+            teIlluminated = teEntityIlluminated;
             if (te.isOffBoard()) {
                 return false;
             }
         }
 
         // Target may be in an illuminated hex
+        boolean hexIlluminated = false;
         if (!teIlluminated) {
-            teIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
+            hexIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
                   target.getPosition()).isNone();
+            teIlluminated = hexIlluminated;
+        }
+        if (teIlluminated) {
+            LOGGER.debug("  illumination source for {}: entityIlluminated={} usingSearchlight={} hexIlluminated={}",
+                  target.getDisplayName(), teEntityIlluminated, teUsingSearchlight, hexIlluminated);
         }
 
         // if either does not have a position then return false
@@ -4395,7 +4418,9 @@ public class Compute {
             Entity targetedEntity = (Entity) target;
 
             // Beyond altitude 8, on ground maps, aerospace can't spot ground units
-            if (attackingEntity.isAirborneAeroOnGroundMap() && (attackingEntity.getAltitude() > 8) && !target.isAirborne()) {
+            if (attackingEntity.isAirborneAeroOnGroundMap()
+                  && (attackingEntity.getAltitude() > 8)
+                  && !target.isAirborne()) {
                 visualRange = 0;
             }
 
@@ -4441,7 +4466,14 @@ public class Compute {
         int distance = attackingPos.distance(targetPos);
         // Need to track difference in altitude, not just add altitude to the range
         distance += Math.abs(2 * target.getAltitude() - 2 * attackingEntity.getAltitude());
-        return distance <= visualRange;
+        boolean inRange = distance <= visualRange;
+        LOGGER.debug("inVisualRange: {} -> {} | distance={} visualRange={} illuminated={} light={} inRange={}",
+              attackingEntity.getDisplayName(),
+              target.getDisplayName(),
+              distance, visualRange, teIlluminated,
+              game.getPlanetaryConditions().getLight(),
+              inRange);
+        return inRange;
 
     }
 
@@ -4453,6 +4485,7 @@ public class Compute {
      * @param game     The current {@link Game}
      * @param targetId - the ID# of the target entity we're looking for
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean isAnySensorContact(Game game, int targetId) {
         Entity targetEntity = game.getEntity(targetId);
 
@@ -4768,6 +4801,7 @@ public class Compute {
         return roll >= tn;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean calcFutureTargetFiringSolution(Game game, Entity attacker,
           Targetable target, Coords futureTargetPosition) {
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
@@ -5087,7 +5121,17 @@ public class Compute {
         if (isAirToAir(game, ae, target) && game.getBoard(ae).isGround()) {
             distance = (int) Math.ceil(distance / 16.0);
         }
-        return (distance > minSensorRange) && (distance <= maxSensorRange);
+        boolean inRange = (distance > minSensorRange) && (distance <= maxSensorRange);
+        LOGGER.debug("inSensorRange: {} -> {} | sensor={} bracket={} rangePerBracket={} "
+                    + "minRange={} maxRange={} distance={} inclusive={} inRange={}",
+              ae.getDisplayName(),
+              target.getDisplayName(),
+              (ae.getActiveSensor() != null ? ae.getActiveSensor().getDisplayName() : "none"),
+              bracket, range,
+              minSensorRange, maxSensorRange, distance,
+              game.getOptions().booleanOption(OptionsConstants.ADVANCED_INCLUSIVE_SENSOR_RANGE),
+              inRange);
+        return inRange;
     }
 
     /**
@@ -5113,11 +5157,13 @@ public class Compute {
         if (los == null) {
             los = LosEffects.calculateLOS(game, ae, target);
         }
-        boolean isVisible = los.canSee() && Compute.inVisualRange(game, los, ae, target);
-        if (useSensors) {
-            isVisible = isVisible
-                  || Compute.inSensorRange(game, los, ae, target, allECMInfo);
-        }
+        boolean hasLos = los.canSee();
+        boolean visual = hasLos && Compute.inVisualRange(game, los, ae, target);
+        boolean viaSensors = useSensors && Compute.inSensorRange(game, los, ae, target, allECMInfo);
+        boolean isVisible = visual || viaSensors;
+        LOGGER.debug("canSee: {} -> {} | useSensors={} hasLOS={} visual={} viaSensors={} result={}",
+              ae.getDisplayName(), target.getDisplayName(),
+              useSensors, hasLos, visual, viaSensors, isVisible);
         return isVisible;
     }
 
@@ -5430,7 +5476,7 @@ public class Compute {
         }
         nRoll += nMod;
         if (!advancedAMS) {
-            nRoll = min(max(nRoll, 2), 12);
+            nRoll = Math.clamp(nRoll, 2, 12);
         } else {
             nRoll = min(nRoll, 12);
         }
@@ -5867,6 +5913,12 @@ public class Compute {
                 data.addModifier(antiMekMod,
                       modName != null ? modName : Messages.getString("Compute.ProstheticEnhancement"));
             }
+        }
+
+        // Mountain Troops anti-Mek bonus - TO:AUE p.153
+        // "Mountain troops apply a -2 modifier to any Anti-Mek Skill Rolls"
+        if (attacker.hasSpecialization(Infantry.MOUNTAIN_TROOPS)) {
+            data.addModifier(-2, Messages.getString("Compute.MountainTroops"));
         }
 
         // Enhanced Imaging bonus for anti-Mek attacks - IO p.69
@@ -6622,12 +6674,12 @@ public class Compute {
             case WeaponType.WEAPON_DIRECT_FIRE -> Messages.getString("WeaponType.DirectFire");
             case WeaponType.WEAPON_CLUSTER_BALLISTIC -> Messages.getString("WeaponType.BallisticCluster");
             case WeaponType.WEAPON_PULSE -> Messages.getString("WeaponType.Pulse");
-            case WeaponType.WEAPON_CLUSTER_MISSILE,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_1D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_2D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE_1D6 -> Messages.getString("WeaponType.Missile") + " (+ 1d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_2D6 -> Messages.getString("WeaponType.Missile") + " (+ 2d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile") + " (+ 3d6)";
             case WeaponType.WEAPON_BURST_HALF_D6 -> Messages.getString("WeaponType.BurstHalf");
-            default -> String.format("%s (%dD6)", Messages.getString("WeaponType.Burst"),
+            default -> String.format("%s (%dd6)", Messages.getString("WeaponType.Burst"),
                   burstMultiplier * (damageType - WeaponType.WEAPON_BURST_HALF_D6));
         };
     }
@@ -6664,7 +6716,7 @@ public class Compute {
      */
     public static int computeTotalDamage(WeaponMounted weapon) {
         int totalDmg = 0;
-        if (weapon.isBombMounted() || !weapon.isCrippled()) {
+        if (!weapon.isCrippled()) {
             WeaponType type = weapon.getType();
             if (type.getDamage() == WeaponType.DAMAGE_VARIABLE) {
                 // Estimate rather than compute exact bay / trooper damage sum.
@@ -6690,13 +6742,14 @@ public class Compute {
 
     /**
      * Method replicates the Non-Conventional Damage against Infantry damage table as well as shifting for direct blows.
-     * also adjust for non-infantry damaging mechanized infantry
+     * also adjust for non-infantry damaging mechanized infantry. No mods for Plasma weapons.
      *
      * @param damage                         The base amount of damage
      * @param mos                            The margin of success
      * @param damageType                     The damage class of the weapon, used to adjust damage against infantry
      * @param isNonInfantryAgainstMechanized Whether this is a non-infantry attack against mechanized infantry
-     * @param isAttackThruBuilding           Whether the attack is coming through a building hex
+     * @param isAttackThruBuilding           Whether the attack involves attacker and target both within the same
+     *                                       building
      * @param attackerId                     The entity id of the attacking unit
      * @param vReport                        The report messages vector
      * @param mgaSize                        For machine gun array attacks, the number of linked weapons. For other
@@ -6709,86 +6762,144 @@ public class Compute {
           boolean isAttackThruBuilding, int attackerId, Vector<Report> vReport,
           int mgaSize) {
 
-        int origDamageType = damageType;
+        // Report initial (original) damage
+        Report r = new Report();
+        r.subject = attackerId;
+        r.indent(2);
+        r.add((int) damage); // field 1
+        r.add(getDamageTypeString(damageType, mgaSize)); // field 2
+        r.messageId = 9970;
+        String mod = "1:1";
+
+        // Update for MOS
         damageType += mos;
-        double origDamage = damage;
+        double priorDamage = damage;
+
         switch (damageType) {
             case WeaponType.WEAPON_DIRECT_FIRE:
                 damage /= 10;
+                mod = "1/10";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_BALLISTIC:
                 damage /= 10;
                 damage++;
+                mod = "1/10 + 1";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_PULSE:
                 damage /= 10;
                 damage += 2;
+                mod = "1/10 + 2";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE:
                 damage /= 5;
+                mod = "1/5";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_1D6:
                 damage /= 5;
+                mod = "1/5 + 1d6";
                 damage += Compute.d6();
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_2D6:
                 damage /= 5;
+                mod = "1/5 + 2d6";
                 damage += Compute.d6(2);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_3D6:
                 damage /= 5;
+                mod = "1/5 + 3d6";
                 damage += Compute.d6(3);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_BURST_HALF_D6:
                 damage = Compute.d6() / 2.0;
+                priorDamage = damage;
+                mod = "-> 1d6 / 2";
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_1D6:
                 damage = Compute.d6(mgaSize);
+                priorDamage = damage;
+                mod = "1d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_2D6:
                 damage = Compute.d6(2 * mgaSize);
+                priorDamage = damage;
+                mod = "2d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_3D6:
                 damage = Compute.d6(3 * mgaSize);
+                priorDamage = damage;
+                mod = "3d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_4D6:
                 damage = Compute.d6(4 * mgaSize);
+                priorDamage = damage;
+                mod = "4d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_5D6:
                 damage = Compute.d6(5 * mgaSize);
+                priorDamage = damage;
+                mod = "5d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_6D6:
                 damage = Compute.d6(6 * mgaSize);
+                priorDamage = damage;
+                mod = "6d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_7D6:
                 damage = Compute.d6(7 * mgaSize);
+                priorDamage = damage;
+                mod = "7d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
         }
         damage = Math.ceil(damage);
+        priorDamage = Math.ceil(priorDamage);
+
+        if (mos != 0) {
+            // List MOS change to damage
+            r.extend(9971);
+            r.add(getDamageTypeString(damageType, mgaSize)); // new field in 9971
+        }
+
+        r.extend(9972);
+        r.add((int) priorDamage);
+        r.add(mod);
+
+        if (isAttackThruBuilding && (priorDamage != damage)) {
+            // Indicates damage halved for thru-building attack; priorDamage != damage
+            r.extend(9972);
+            r.add((int) damage);
+            r.add(ReportMessages.getString(String.valueOf(9973)));
+        }
 
         // according to the following ruling, the half damage that mechanized
         // inf get against burst fire should trump the double damage they get
@@ -6800,31 +6911,16 @@ public class Compute {
             } else {
                 damage /= 2;
             }
+            r.extend(9972);
+            // Per TW 7th Ed. pg 217 (and our wonky implementation) this damage is *not* rounded up.
+            r.add((int) damage);
+            r.add(ReportMessages.getString(String.valueOf(9974)));
         }
 
         if (vReport != null) {
-            Report r = new Report();
-            r.subject = attackerId;
-            r.indent(2);
-
-            r.add(getDamageTypeString(origDamageType, mgaSize));
-            if (origDamageType != damageType) {
-                if (isAttackThruBuilding) {
-                    r.messageId = 9973;
-                } else {
-                    r.messageId = 9972;
-                }
-                r.add(getDamageTypeString(damageType, mgaSize));
-            } else if (isAttackThruBuilding) {
-                r.messageId = 9971;
-            } else {
-                r.messageId = 9970;
-            }
-
-            r.add((int) origDamage);
-            r.add((int) damage);
             vReport.addElement(r);
         }
+
         return (int) damage;
     }
 
@@ -7137,9 +7233,36 @@ public class Compute {
                 }
 
                 switch (ammoType.getAmmoType()) {
-                    case SRM_STREAK, LRM_STREAK, LRM, LRM_IMP, LRM_TORPEDO, SRM, SRM_IMP, SRM_TORPEDO, MRM, NARC,
-                         INARC, AMS, ARROW_IV, LONG_TOM, SNIPER, THUMPER, SRM_ADVANCED, LRM_TORPEDO_COMBO, ATM, IATM,
-                         MML, EXLRM, NLRM, TBOLT_5, TBOLT_10, TBOLT_15, TBOLT_20, HAG, ROCKET_LAUNCHER -> {
+                    case SRM_STREAK,
+                         LRM_STREAK,
+                         LRM,
+                         LRM_IMP,
+                         LRM_TORPEDO,
+                         SRM,
+                         SRM_IMP,
+                         SRM_TORPEDO,
+                         MRM,
+                         NARC,
+                         INARC,
+                         AMS,
+                         ARROW_IV,
+                         LONG_TOM,
+                         SNIPER,
+                         THUMPER,
+                         SRM_ADVANCED,
+                         LRM_TORPEDO_COMBO,
+                         ATM,
+                         IATM,
+                         MML,
+                         EXLRM,
+                         NLRM,
+                         NLRM_TORPEDO,
+                         TBOLT_5,
+                         TBOLT_10,
+                         TBOLT_15,
+                         TBOLT_20,
+                         HAG,
+                         ROCKET_LAUNCHER -> {
                         return false;
                     }
                     default -> {
@@ -7890,7 +8013,9 @@ public class Compute {
 
     /**
      * Fast log2 implementation; throws if number &le; 0
-     * @param number        positive int to get the log2 of
+     *
+     * @param number positive int to get the log2 of
+     *
      * @return int          approximate log2 of number; functionally (Math.floor(log10(10)/log10(2))
      */
     public static int log2(int number) throws IllegalArgumentException {
@@ -7901,12 +8026,14 @@ public class Compute {
     }
 
     /**
-     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat.
-     * May need extension for different map types but unlikely.
-     * @param carrier   Entity that will be doing the loading
-     * @param position  Coords of hex to use as the center of the carrier; may not match carrier's current position
-     *                  value.
-     * @param boardId   For future use, e.g. low-altitude or multi-board maps
+     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat. May need
+     * extension for different map types but unlikely.
+     *
+     * @param carrier  Entity that will be doing the loading
+     * @param position Coords of hex to use as the center of the carrier; may not match carrier's current position
+     *                 value.
+     * @param boardId  For future use, e.g. low-altitude or multi-board maps
+     *
      * @return ArrayList of Coords that the carrier entity can legally load units from
      */
     public static ArrayList<Coords> getLoadableCoords(Entity carrier, Coords position, int boardId) {
@@ -7920,12 +8047,15 @@ public class Compute {
         if (carrier.isDropShip() && carrier.isAeroLandedOnGroundMap()) {
             list.addAll(position.allAtDistance(2));
         } else if (
-              // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
-              // directly adjacent hexes
-              carrier instanceof SmallCraft ||
-              (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT)) ||
-              (carrier.isDropShip() && carrier.isAirborne()) ||
-              (carrier.isWarShip())
+            // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
+            // directly adjacent hexes
+              carrier instanceof SmallCraft
+                    ||
+                    (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT))
+                    ||
+                    (carrier.isDropShip() && carrier.isAirborne())
+                    ||
+                    (carrier.isWarShip())
         ) {
             list.addAll(position.allAtDistance(1));
         } else {
