@@ -33,6 +33,7 @@
 
 package megamek.common;
 
+import static megamek.common.compute.Compute.directBlowInfantryDamage;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -44,6 +45,7 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
+import java.util.Vector;
 
 import megamek.client.Client;
 import megamek.client.ui.clientGUI.ClientGUI;
@@ -54,8 +56,8 @@ import megamek.common.enums.BuildingType;
 import megamek.common.equipment.AmmoMounted;
 import megamek.common.equipment.AmmoType;
 import megamek.common.equipment.EquipmentType;
-import megamek.common.equipment.WeaponMounted;
 import megamek.common.equipment.IArmorState;
+import megamek.common.equipment.WeaponMounted;
 import megamek.common.equipment.WeaponType;
 import megamek.common.exceptions.LocationFullException;
 import megamek.common.game.Game;
@@ -64,17 +66,7 @@ import megamek.common.options.Option;
 import megamek.common.options.OptionsConstants;
 import megamek.common.options.PilotOptions;
 import megamek.common.rolls.TargetRoll;
-import megamek.common.units.AeroSpaceFighter;
-import megamek.common.units.BipedMek;
-import megamek.common.units.BuildingEntity;
-import megamek.common.units.Crew;
-import megamek.common.units.Entity;
-import megamek.common.units.CrewType;
-import megamek.common.units.Infantry;
-import megamek.common.units.Mek;
-import megamek.common.units.Targetable;
-import megamek.common.weapons.lasers.innerSphere.medium.ISLaserMedium;
-import megamek.common.units.TripodMek;
+import megamek.common.units.*;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -82,7 +74,6 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
 
 class ComputeTest {
 
@@ -570,7 +561,7 @@ class ComputeTest {
         // Add a weapon to center torso (valid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_CENTER_TORSO);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -594,7 +585,7 @@ class ComputeTest {
         // Add a weapon to center torso (valid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_CENTER_TORSO);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -622,7 +613,7 @@ class ComputeTest {
         // Add a weapon to center torso (valid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_CENTER_TORSO);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -649,7 +640,7 @@ class ComputeTest {
         // Add a weapon to center torso (valid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_CENTER_TORSO);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -668,7 +659,7 @@ class ComputeTest {
         // Add a weapon to center leg (invalid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_CENTER_LEG);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -689,7 +680,7 @@ class ComputeTest {
         // Add a weapon to left leg (invalid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_LEFT_LEG);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -710,7 +701,7 @@ class ComputeTest {
         // Add a weapon to right leg (invalid location for prone firing)
         WeaponType mediumLaser = (WeaponType) EquipmentType.get("ISMediumLaser");
         tripod.addEquipment(mediumLaser, Mek.LOC_RIGHT_LEG);
-        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().get(0));
+        int weaponId = tripod.getEquipmentNum(tripod.getWeaponList().getFirst());
 
         ToHitData mods = Compute.getProneMods(game, tripod, weaponId);
 
@@ -884,5 +875,87 @@ class ComputeTest {
                 assertEquals(4, result.getValue(), "Should have +4 range modifier at long range (3 hexes)");
             }
         }
+    }
+
+    @Test
+    void testDirectBlowInfantryStandardMod() {
+        // Damage should just be divided by 10
+        double originalDamage = 5.0;
+        int weaponType = WeaponType.WEAPON_DIRECT_FIRE;
+        Vector<Report> reports = new Vector<>();
+        int newDamage = directBlowInfantryDamage(
+              originalDamage,
+              0,
+              weaponType,
+              false,
+              false,
+              1,
+              reports,
+              0
+        );
+        assertEquals(1, newDamage, "5.0 / 10, rounded up.");
+        assertEquals(1, reports.size(), "Report size");
+    }
+
+    @Test
+    void testDirectBlowInfantryMechanizedMod() {
+        // Damage should be divided by 10, then rounded, then doubled due to non-burst damage
+        double originalDamage = 5.0;
+        int weaponType = WeaponType.WEAPON_DIRECT_FIRE;
+        Vector<Report> reports = new Vector<>();
+        int newDamage = directBlowInfantryDamage(
+              originalDamage,
+              0,
+              weaponType,
+              true,
+              false,
+              1,
+              reports,
+              0
+        );
+        assertEquals(2, newDamage, "5.0 / 10, rounded up.");
+        assertEquals(1, reports.size(), "Report size");
+    }
+
+    @Test
+    void testDirectBlowInfantryMechanizedBurstMod() {
+        // 5 BA LMGs -> 1D6 / 2, halved by Mechanized Armor vs Burst
+        double originalDamage = 5.0;
+        int weaponType = WeaponType.WEAPON_BURST_HALF_D6;
+        Vector<Report> reports = new Vector<>();
+        int newDamage = directBlowInfantryDamage(
+              originalDamage,
+              0,
+              weaponType,
+              true,
+              false,
+              1,
+              reports,
+              0
+        );
+        assertTrue(1 >= newDamage, "5 -> 1d6/2, rounded up, then halved and _not_ rounded.");
+        assertEquals(1, reports.size(), "Report size");
+    }
+
+    @Test
+    void testDirectBlowInfantryMOS3BurstInBuilding() {
+        // Burst Weapon in the building attacking infantry also in the building.
+        // 1D6 -> 4D6 -> 4D6 / 2
+        double originalDamage = 10.0;
+        int weaponType = WeaponType.WEAPON_BURST_1D6;
+        Vector<Report> reports = new Vector<>();
+        int newDamage = directBlowInfantryDamage(
+              originalDamage,
+              3,
+              weaponType,
+              false,
+              true,
+              1,
+              reports,
+              1
+        );
+        assertTrue(newDamage >= 2.0 && newDamage <= 12.0, "10 -> 4D6 / 2.0, rounded up: " + newDamage);
+        assertEquals(1, reports.size(), "Report size");
+        assertTrue(reports.getFirst().text().contains("in building"));
     }
 }
